@@ -5,6 +5,8 @@ import com.ssafy.pennypal.bank.service.api.BankServiceAPIImpl;
 import com.ssafy.pennypal.common.RestDocsSupport;
 import com.ssafy.pennypal.domain.chat.entity.ChatRoom;
 import com.ssafy.pennypal.domain.chat.service.ChatService;
+import com.ssafy.pennypal.domain.member.dto.response.TeamLastEachTotalResponse;
+import com.ssafy.pennypal.domain.member.dto.response.TeamThisEachTotalResponse;
 import com.ssafy.pennypal.domain.member.entity.Member;
 import com.ssafy.pennypal.domain.team.dto.SimpleTeamDto;
 import com.ssafy.pennypal.domain.team.dto.request.*;
@@ -18,7 +20,6 @@ import org.springframework.restdocs.payload.JsonFieldType;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -30,8 +31,6 @@ import static org.mockito.Mockito.*;
 import static org.springframework.restdocs.mockmvc.MockMvcRestDocumentation.document;
 import static org.springframework.restdocs.operation.preprocess.Preprocessors.*;
 import static org.springframework.restdocs.payload.PayloadDocumentation.*;
-import static org.springframework.restdocs.request.RequestDocumentation.parameterWithName;
-import static org.springframework.restdocs.request.RequestDocumentation.queryParameters;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -52,32 +51,41 @@ public class TeamControllerTest extends RestDocsSupport {
     @Test
     void createTeam() throws Exception {
 
-        Member mockMember = mock(Member.class);
-
-        // ID 1L의 Mock Member 생성
-        given(mockMember.getMemberId()).willReturn(1L);
+        TeamMemberExpenseResponse member = mock(TeamMemberExpenseResponse.class);
+        Team team = mock(Team.class);
+        TeamLastEachTotalResponse teamLastEachTotalResponse = mock(TeamLastEachTotalResponse.class);
+        TeamThisEachTotalResponse teamThisEachTotalResponse = mock(TeamThisEachTotalResponse.class);
 
         TeamCreateRequest request = TeamCreateRequest.builder()
                 .teamName("팀이름")
                 .teamIsAutoConfirm(false)
-                .teamLeaderId(mockMember.getMemberId())
+                .teamLeaderId(1L)
                 .teamInfo("팀소개")
                 .build();
 
-        // Mock MemberDetailResponse 생성
-        TeamMemberExpenseResponse mockMemberDetail = TeamMemberExpenseResponse.builder()
-                .memberNickname("팀원닉네임")
-                .build();
+        given(team.getTeamId()).willReturn(1L);
+        given(member.getMemberNickname()).willReturn("멤버 닉네임");
+        given(teamLastEachTotalResponse.getDate()).willReturn(LocalDate.of(2024, 3, 28));
+        given(teamLastEachTotalResponse.getTotalAmount()).willReturn(300000);
+        given(teamThisEachTotalResponse.getDate()).willReturn(LocalDate.of(2024, 3, 28));
+        given(teamThisEachTotalResponse.getTotalAmount()).willReturn(300000);
 
         // stubbing
         given(teamService.createTeam(any(TeamCreateServiceRequest.class)))
-                .willReturn(TeamCreateResponse.builder()
+                .willReturn(TeamDetailResponse.builder()
+                        .teamId(1L)
                         .teamName("팀이름")
-                        .teamInfo("팀소개")
-                        .teamScore(100)
                         .teamLeaderId(1L)
-                        .members(Arrays.asList(mockMemberDetail))
+                        .teamInfo("팀 한줄소개")
+                        .teamScore(0)
+                        .teamRankRealtime(1)
+                        .teamLastTotalExpenses(30000)
+                        .teamThisTotalExpenses(200000)
+                        .teamLastEachTotalExpenses(List.of(teamLastEachTotalResponse))
+                        .teamThisEachTotalExpenses(List.of(teamThisEachTotalResponse))
+                        .members(Arrays.asList(member))
                         .build());
+
 
         mockMvc.perform(
                         post("/api/team/create")
@@ -87,41 +95,61 @@ public class TeamControllerTest extends RestDocsSupport {
                 .andDo(print())
                 .andExpect(status().isOk())
                 .andDo(document("create-team",
-                                preprocessRequest(prettyPrint()),
-                                preprocessResponse(prettyPrint()),
-                                requestFields(
-                                        fieldWithPath("teamName").type(JsonFieldType.STRING)
-                                                .description("팀 이름"),
-                                        fieldWithPath("teamIsAutoConfirm").type(JsonFieldType.BOOLEAN)
-                                                .description("자동가입 승인 여부"),
-                                        fieldWithPath("teamLeaderId").type(JsonFieldType.NUMBER)
-                                                .description("팀장 ID"),
-                                        fieldWithPath("teamInfo").type(JsonFieldType.STRING)
-                                                .description("팀 한줄소개")
-                                ),
-                                responseFields(
-                                        fieldWithPath("code").type(JsonFieldType.NUMBER)
-                                                .description("코드"),
-                                        fieldWithPath("status").type(JsonFieldType.STRING)
-                                                .description("상태"),
-                                        fieldWithPath("message").type(JsonFieldType.STRING)
-                                                .description("메시지"),
-                                        fieldWithPath("data").type(JsonFieldType.OBJECT)
-                                                .description("응답 데이터"),
-                                        fieldWithPath("data.teamName").type(JsonFieldType.STRING)
-                                                .description("팀 명"),
-                                        fieldWithPath("data.teamInfo").type(JsonFieldType.STRING)
-                                                .description("팀 한줄소개"),
-                                        fieldWithPath("data.teamScore").type(JsonFieldType.NUMBER)
-                                                .description("팀 포인트"),
-                                        fieldWithPath("data.teamLeaderId").type(JsonFieldType.NUMBER)
-                                                .description("팀장 ID"),
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint()),
+                        responseFields(
+                                fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                        .description("코드"),
+                                fieldWithPath("status").type(JsonFieldType.STRING)
+                                        .description("상태"),
+                                fieldWithPath("message").type(JsonFieldType.STRING)
+                                        .description("메시지"),
 
-                                        subsectionWithPath("data.members").type(JsonFieldType.ARRAY)
-                                                .description("팀 멤버 목록"),
-                                        fieldWithPath("data.members[].memberNickname").type(JsonFieldType.STRING)
-                                                .description("멤버 닉네임")
-                                )
+                                fieldWithPath("data").type(JsonFieldType.OBJECT)
+                                        .description("응답 데이터"),
+                                fieldWithPath("data.teamId").type(JsonFieldType.NUMBER)
+                                        .description("팀 ID"),
+                                fieldWithPath("data.teamName").type(JsonFieldType.STRING)
+                                        .description("팀 명"),
+                                fieldWithPath("data.teamLeaderId").type(JsonFieldType.NUMBER)
+                                        .description("팀장 ID"),
+                                fieldWithPath("data.teamInfo").type(JsonFieldType.STRING)
+                                        .description("팀 한줄 소개"),
+                                fieldWithPath("data.teamScore").type(JsonFieldType.NUMBER)
+                                        .description("팀 포인트"),
+
+                                fieldWithPath("data.teamRankRealtime").type(JsonFieldType.NUMBER)
+                                        .description("팀 실시간 랭킹"),
+                                fieldWithPath("data.teamLastTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("지난주 총 지출액"),
+                                fieldWithPath("data.teamThisTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("이번주 총 지출액"),
+
+                                fieldWithPath("data.teamLastEachTotalExpenses").type(JsonFieldType.ARRAY)
+                                        .description("지난주 일자 별 총 지출액"),
+                                fieldWithPath("data.teamLastEachTotalExpenses[].date").type(JsonFieldType.ARRAY)
+                                        .description("일자"),
+                                fieldWithPath("data.teamLastEachTotalExpenses[].totalAmount").type(JsonFieldType.NUMBER)
+                                        .description("지출액"),
+
+                                fieldWithPath("data.teamThisEachTotalExpenses").type(JsonFieldType.ARRAY)
+                                        .description("이번주 일자 별 총 지출액"),
+                                fieldWithPath("data.teamThisEachTotalExpenses[].date").type(JsonFieldType.ARRAY)
+                                        .description("일자"),
+                                fieldWithPath("data.teamThisEachTotalExpenses[].totalAmount").type(JsonFieldType.NUMBER)
+                                        .description("지출액"),
+
+                                fieldWithPath("data.members").type(JsonFieldType.ARRAY)
+                                        .description("팀 멤버"),
+                                fieldWithPath("data.members[].memberId").type(JsonFieldType.NUMBER)
+                                        .description("멤버 ID"),
+                                fieldWithPath("data.members[].memberNickname").type(JsonFieldType.STRING)
+                                        .description("멤버 닉네임"),
+                                fieldWithPath("data.members[].memberLastTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("멤버 지난주 지출 총액"),
+                                fieldWithPath("data.members[].memberThisTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("멤버 이번주 지출 총액")
+                        )
                         )
                 );
         verify(teamService).createTeam(any(TeamCreateServiceRequest.class));
@@ -140,7 +168,7 @@ public class TeamControllerTest extends RestDocsSupport {
         // leaderId가 1L인 Mock Team 생성
         given(team.getTeamLeaderId()).willReturn(1L);
 
-        TeamJoinRequest request = TeamJoinRequest.builder()
+        TeamRequestDTO request = TeamRequestDTO.builder()
                 .teamId(1L)
                 .memberId(2L)
                 .build();
@@ -200,146 +228,21 @@ public class TeamControllerTest extends RestDocsSupport {
         verify(teamService).joinTeam(any(TeamJoinServiceRequest.class));
     }
 
-    @DisplayName("팀 주간 랭킹 조회")
-    @Test
-    void weeklyTeamRanking() throws Exception {
-        // given
-        TeamRankHistoryResponse rankResponse1 = mock(TeamRankHistoryResponse.class);
-        TeamRankHistoryResponse rankResponse2 = mock(TeamRankHistoryResponse.class);
-        TeamRankHistoryResponse rankResponse3 = mock(TeamRankHistoryResponse.class);
-
-        Team team1 = mock(Team.class);
-        Team team2 = mock(Team.class);
-        Team team3 = mock(Team.class);
-
-        LocalDate rankDate = LocalDate.of(2024, 03, 25);
-
-        List<Team> teams = Arrays.asList(team1, team2, team3);
-        List<TeamRankHistoryResponse> rankResponses = Arrays.asList(rankResponse1, rankResponse2, rankResponse3);
-
-        // Stubbing
-        given(teamService.rankHistoriesForWeeks()).willReturn(rankResponses);
-        given(rankResponse1.getTeamName()).willReturn("팀이름1");
-        given(rankResponse2.getTeamName()).willReturn("팀이름2");
-        given(rankResponse3.getTeamName()).willReturn("팀이름3");
-        given(rankResponse1.getRankDate()).willReturn(rankDate);
-        given(rankResponse2.getRankDate()).willReturn(rankDate);
-        given(rankResponse3.getRankDate()).willReturn(rankDate);
-        given(rankResponse1.getRankNum()).willReturn(3);
-        given(rankResponse2.getRankNum()).willReturn(1);
-        given(rankResponse3.getRankNum()).willReturn(2);
-
-
-        mockMvc.perform(
-                        get("/api/team/rank/weekly")
-                                .contentType(MediaType.APPLICATION_JSON)
-                )
-                .andDo(print())
-                .andExpect(status().isOk())
-                .andDo(document("weekly-team-ranking",
-                        preprocessRequest(prettyPrint()),
-                        preprocessResponse(prettyPrint()),
-                        responseFields(
-                                fieldWithPath("code").type(JsonFieldType.NUMBER)
-                                        .description("코드"),
-                                fieldWithPath("status").type(JsonFieldType.STRING)
-                                        .description("상태"),
-                                fieldWithPath("message").type(JsonFieldType.STRING)
-                                        .description("메시지"),
-
-                                fieldWithPath("data").type(JsonFieldType.ARRAY)
-                                        .description("응답 데이터"),
-                                fieldWithPath("data.[].teamName").type(JsonFieldType.STRING)
-                                        .description("팀 이름"),
-                                fieldWithPath("data.[].rankDate").type(JsonFieldType.ARRAY)
-                                        .description("랭킹 기록 날짜"),
-                                fieldWithPath("data.[].rankNum").type(JsonFieldType.NUMBER)
-                                        .description("팀 등수")
-                        )
-                ));
-
-        // Service 메서드가 호출되었는지 확인
-        verify(teamService).rankHistoriesForWeeks();
-
-    }
-
-    @DisplayName("팀 실시간 랭킹 조회")
-    @Test
-    void realtimeTeamRanking() throws Exception {
-        // given
-        TeamRankResponse rankresponse1 = mock(TeamRankResponse.class);
-        TeamRankResponse rankresponse2 = mock(TeamRankResponse.class);
-        TeamRankResponse rankresponse3 = mock(TeamRankResponse.class);
-
-        Team team1 = mock(Team.class);
-        Team team2 = mock(Team.class);
-        Team team3 = mock(Team.class);
-
-        LocalDate rankDate = LocalDate.of(2024, 03, 25);
-
-        List<Team> teams = Arrays.asList(team1, team2, team3);
-        List<TeamRankResponse> mockRankResponses = Arrays.asList(rankresponse1, rankresponse2, rankresponse3);
-
-        given(teamService.RankTeamRealTimeScore()).willReturn(mockRankResponses);
-        given(rankresponse1.getTeamId()).willReturn(1L);
-        given(rankresponse2.getTeamId()).willReturn(2L);
-        given(rankresponse3.getTeamId()).willReturn(3L);
-        given(rankresponse1.getTeamName()).willReturn("팀이름1");
-        given(rankresponse2.getTeamName()).willReturn("팀이름2");
-        given(rankresponse3.getTeamName()).willReturn("팀이름3");
-        given(rankresponse1.getTeamScore()).willReturn(100);
-        given(rankresponse2.getTeamScore()).willReturn(300);
-        given(rankresponse3.getTeamScore()).willReturn(200);
-        given(rankresponse1.getTeamRankNum()).willReturn(3);
-        given(rankresponse2.getTeamRankNum()).willReturn(1);
-        given(rankresponse3.getTeamRankNum()).willReturn(2);
-
-
-        mockMvc.perform(
-                        get("/api/team/rank/realtime")
-                                .contentType(MediaType.APPLICATION_JSON)
-                )
-                .andDo(print())
-                .andExpect(status().isOk())
-                .andDo(document("realtime-team-ranking",
-                        preprocessRequest(prettyPrint()),
-                        preprocessResponse(prettyPrint()),
-                        responseFields(
-                                fieldWithPath("code").type(JsonFieldType.NUMBER)
-                                        .description("코드"),
-                                fieldWithPath("status").type(JsonFieldType.STRING)
-                                        .description("상태"),
-                                fieldWithPath("message").type(JsonFieldType.STRING)
-                                        .description("메시지"),
-
-                                fieldWithPath("data").type(JsonFieldType.ARRAY)
-                                        .description("응답 데이터"),
-                                fieldWithPath("data.[].teamId").type(JsonFieldType.NUMBER)
-                                        .description("팀 ID"),
-                                fieldWithPath("data.[].teamName").type(JsonFieldType.STRING)
-                                        .description("팀 이름"),
-                                fieldWithPath("data.[].teamScore").type(JsonFieldType.NUMBER)
-                                        .description("팀 점수"),
-                                fieldWithPath("data.[].teamRankNum").type(JsonFieldType.NUMBER)
-                                        .description("팀 등수")
-                        )
-                ));
-
-        // Service 메서드가 호출되었는지 확인
-        verify(teamService).RankTeamRealTimeScore();
-
-
-    }
-
     @DisplayName("팀 상세 조회")
     @Test
     void detailTeamInfo() throws Exception {
         // given
         Team team = mock(Team.class);
         TeamMemberExpenseResponse member = mock(TeamMemberExpenseResponse.class);
+        TeamLastEachTotalResponse teamLastEachTotalResponse = mock(TeamLastEachTotalResponse.class);
+        TeamThisEachTotalResponse teamThisEachTotalResponse = mock(TeamThisEachTotalResponse.class);
 
         given(team.getTeamId()).willReturn(1L);
         given(member.getMemberNickname()).willReturn("멤버 닉네임");
+        given(teamLastEachTotalResponse.getDate()).willReturn(LocalDate.of(2024, 3, 28));
+        given(teamLastEachTotalResponse.getTotalAmount()).willReturn(300000);
+        given(teamThisEachTotalResponse.getDate()).willReturn(LocalDate.of(2024, 3, 28));
+        given(teamThisEachTotalResponse.getTotalAmount()).willReturn(300000);
 
         given(teamService.detailTeamInfo(anyLong()))
                 .willReturn(TeamDetailResponse.builder()
@@ -348,7 +251,11 @@ public class TeamControllerTest extends RestDocsSupport {
                         .teamLeaderId(1L)
                         .teamInfo("팀 한줄소개")
                         .teamScore(150)
-                        .teamRankNum(1)
+                        .teamRankRealtime(1)
+                        .teamLastTotalExpenses(30000)
+                        .teamThisTotalExpenses(200000)
+                        .teamLastEachTotalExpenses(List.of(teamLastEachTotalResponse))
+                        .teamThisEachTotalExpenses(List.of(teamThisEachTotalResponse))
                         .members(Arrays.asList(member, member))
                         .build());
 
@@ -374,76 +281,49 @@ public class TeamControllerTest extends RestDocsSupport {
                                 fieldWithPath("data.teamId").type(JsonFieldType.NUMBER)
                                         .description("팀 ID"),
                                 fieldWithPath("data.teamName").type(JsonFieldType.STRING)
-                                        .description("팀 이름"),
+                                        .description("팀 명"),
                                 fieldWithPath("data.teamLeaderId").type(JsonFieldType.NUMBER)
                                         .description("팀장 ID"),
                                 fieldWithPath("data.teamInfo").type(JsonFieldType.STRING)
-                                        .description("팀 한줄소개"),
+                                        .description("팀 한줄 소개"),
                                 fieldWithPath("data.teamScore").type(JsonFieldType.NUMBER)
-                                        .description("팀 점수"),
-                                fieldWithPath("data.teamRankNum").type(JsonFieldType.NUMBER)
-                                        .description("팀 랭킹 등수"),
+                                        .description("팀 포인트"),
 
-                                subsectionWithPath("data.members").type(JsonFieldType.ARRAY)
-                                        .description("팀원"),
-                                subsectionWithPath("data.members[].memberLastWeekExpenses").type(JsonFieldType.ARRAY)
-                                        .description("팀원 지난주 지출 내역"),
-                                subsectionWithPath("data.members[].memberThisWeekExpenses").type(JsonFieldType.ARRAY)
-                                        .description("팀원 이번주 지출 내역")
+                                fieldWithPath("data.teamRankRealtime").type(JsonFieldType.NUMBER)
+                                        .description("팀 실시간 랭킹"),
+                                fieldWithPath("data.teamLastTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("지난주 총 지출액"),
+                                fieldWithPath("data.teamThisTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("이번주 총 지출액"),
+
+                                fieldWithPath("data.teamLastEachTotalExpenses").type(JsonFieldType.ARRAY)
+                                        .description("지난주 일자 별 총 지출액"),
+                                fieldWithPath("data.teamLastEachTotalExpenses[].date").type(JsonFieldType.ARRAY)
+                                        .description("일자"),
+                                fieldWithPath("data.teamLastEachTotalExpenses[].totalAmount").type(JsonFieldType.NUMBER)
+                                        .description("지출액"),
+
+                                fieldWithPath("data.teamThisEachTotalExpenses").type(JsonFieldType.ARRAY)
+                                        .description("이번주 일자 별 총 지출액"),
+                                fieldWithPath("data.teamThisEachTotalExpenses[].date").type(JsonFieldType.ARRAY)
+                                        .description("일자"),
+                                fieldWithPath("data.teamThisEachTotalExpenses[].totalAmount").type(JsonFieldType.NUMBER)
+                                        .description("지출액"),
+
+                                fieldWithPath("data.members").type(JsonFieldType.ARRAY)
+                                        .description("팀 멤버"),
+                                fieldWithPath("data.members[].memberId").type(JsonFieldType.NUMBER)
+                                        .description("멤버 ID"),
+                                fieldWithPath("data.members[].memberNickname").type(JsonFieldType.STRING)
+                                        .description("멤버 닉네임"),
+                                fieldWithPath("data.members[].memberLastTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("멤버 지난주 지출 총액"),
+                                fieldWithPath("data.members[].memberThisTotalExpenses").type(JsonFieldType.NUMBER)
+                                        .description("멤버 이번주 지출 총액")
                         )
 
                 ));
         verify(teamService).detailTeamInfo(anyLong());
-    }
-
-    @DisplayName("팀 전체 조회")
-    @Test
-    void searchTeamList() throws Exception {
-        // given
-        Team team = mock(Team.class);
-        TeamSearchResponse response = mock(TeamSearchResponse.class);
-
-        List<TeamSearchResponse> responses = new ArrayList<>();
-        responses.add(new TeamSearchResponse(1L, "teamName1", 3, "팀장닉네임1", true));
-        responses.add(new TeamSearchResponse(2L, "teamName2", 6, "팀장닉네임2", false));
-        responses.add(new TeamSearchResponse(3L, "teamName3", 4, "팀장닉네임3", true));
-        given(teamService.searchTeamList("name")).willReturn(responses);
-
-        mockMvc.perform(
-                        get("/api/team?keyword=name")
-                                .contentType(MediaType.APPLICATION_JSON)
-                )
-                .andDo(print())
-                .andExpect(status().isOk())
-                .andDo(document("search-team-list",
-                        preprocessResponse(prettyPrint()),
-                        queryParameters(
-                                parameterWithName("keyword").description("검색할 키워드")
-                        ),
-                        responseFields(
-                                fieldWithPath("code").type(JsonFieldType.NUMBER)
-                                        .description("코드"),
-                                fieldWithPath("status").type(JsonFieldType.STRING)
-                                        .description("상태"),
-                                fieldWithPath("message").type(JsonFieldType.STRING)
-                                        .description("메시지"),
-
-                                fieldWithPath("data").type(JsonFieldType.ARRAY)
-                                        .description("응답 데이터"),
-                                fieldWithPath("data.[].teamId").type(JsonFieldType.NUMBER)
-                                        .description("팀 ID"),
-                                fieldWithPath("data.[].teamName").type(JsonFieldType.STRING)
-                                        .description("팀 이름"),
-                                fieldWithPath("data.[].teamMembersNum").type(JsonFieldType.NUMBER)
-                                        .description("팀 멤버 수"),
-                                fieldWithPath("data.[].teamLeaderNickname").type(JsonFieldType.STRING)
-                                        .description("팀장 닉네임"),
-                                fieldWithPath("data.[].teamIsAutoConfirm").type(JsonFieldType.BOOLEAN)
-                                        .description("자동 가입 승인 여부")
-                        )
-                ));
-
-        verify(teamService).searchTeamList("name");
     }
 
     @DisplayName("팀 정보 수정")
@@ -651,6 +531,245 @@ public class TeamControllerTest extends RestDocsSupport {
                 ));
 
         verify(teamService).banishMember(any(TeamBanishRequest.class));
+
+    }
+
+    @DisplayName("팀명 중복 체크")
+    @Test
+    void validTeamName() throws Exception {
+        // given
+        Team team = mock(Team.class);
+
+        when(teamService.validTeamName(anyString())).thenReturn(false);
+
+        mockMvc.perform(
+                        post("/api/team/create/{keyword}", "teamName1")
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andDo(document("valid-team-name",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint()),
+                        responseFields(
+                                fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                        .description("코드"),
+                                fieldWithPath("status").type(JsonFieldType.STRING)
+                                        .description("상태"),
+                                fieldWithPath("message").type(JsonFieldType.STRING)
+                                        .description("메시지"),
+
+                                fieldWithPath("data").type(JsonFieldType.BOOLEAN)
+                                        .description("중복 여부")
+                        )
+
+                ));
+
+        verify(teamService).validTeamName(anyString());
+
+    }
+
+    @DisplayName("팀 가입 대기 리스트 조회")
+    @Test
+    void waitingList() throws Exception {
+        // given
+        Team team = mock(Team.class);
+        Member member = mock(Member.class);
+
+        TeamRequestDTO request = TeamRequestDTO.builder()
+                .teamId(1L)
+                .memberId(3L)
+                .build();
+
+        TeamWaitingListResponse response = TeamWaitingListResponse.builder()
+                .memberId(3L)
+                .memberNickname("대기자 닉네임")
+                .memberMostCategory("문화")
+                .build();
+
+        List<TeamWaitingListResponse> responseList = List.of(response, response);
+
+        when(teamService.waitingList(any(TeamRequestDTO.class)))
+                .thenReturn(responseList);
+
+        mockMvc.perform(
+                        post("/api/team/waitingList")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(new ObjectMapper().writeValueAsString(request))
+                )
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andDo(document("waiting-list",
+                                preprocessRequest(prettyPrint()),
+                                preprocessResponse(prettyPrint()),
+                                requestFields(
+                                        fieldWithPath("teamId").type(JsonFieldType.NUMBER)
+                                                .description("팀 ID"),
+                                        fieldWithPath("memberId").type(JsonFieldType.NUMBER)
+                                                .description("리스트 보려는 유저(팀장) ID")
+                                ), responseFields(
+                                        fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                                .description("코드"),
+                                        fieldWithPath("status").type(JsonFieldType.STRING)
+                                                .description("상태"),
+                                        fieldWithPath("message").type(JsonFieldType.STRING)
+                                                .description("메시지"),
+
+                                        fieldWithPath("data").type(JsonFieldType.ARRAY)
+                                                .description("응답 데이터"),
+                                        fieldWithPath("data.[].memberId").type(JsonFieldType.NUMBER)
+                                                .description("유저 ID"),
+                                        fieldWithPath("data.[].memberNickname").type(JsonFieldType.STRING)
+                                                .description("유저 닉네임"),
+                                        fieldWithPath("data.[].memberMostCategory").type(JsonFieldType.STRING)
+                                                .description("유저 최대 지출 카테고리")
+                                )
+                        )
+
+                );
+        verify(teamService).waitingList(any(TeamRequestDTO.class));
+
+    }
+
+    @DisplayName("다른 팀 상세조회")
+    @Test
+    void detailOtherTeamInfo() throws Exception {
+        // given
+        Team team = mock(Team.class);
+        Member member = mock(Member.class);
+
+        TeamOtherDetailResponse otherTeamInfo = TeamOtherDetailResponse.builder()
+                .teamName("팀 이름")
+                .teamLeaderNickname("리더 닉네임")
+                .lastRank(2)
+                .teamInfo("팀 한줄 소개")
+                .build();
+
+        when(teamService.detailOtherTeamInfo(anyLong()))
+                .thenReturn(otherTeamInfo);
+
+        mockMvc.perform(
+                        get("/api/team/detail/{teamId}", 1L)
+                                .contentType(MediaType.APPLICATION_JSON)
+                )
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andDo(document("detail-other-team",
+                        preprocessRequest(prettyPrint()),
+                        preprocessResponse(prettyPrint()),
+                        responseFields(
+                                fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                        .description("코드"),
+                                fieldWithPath("status").type(JsonFieldType.STRING)
+                                        .description("상태"),
+                                fieldWithPath("message").type(JsonFieldType.STRING)
+                                        .description("메시지"),
+
+                                fieldWithPath("data").type(JsonFieldType.OBJECT)
+                                        .description("응답 데이터"),
+                                fieldWithPath("data.teamName").type(JsonFieldType.STRING)
+                                        .description("팀 명"),
+                                fieldWithPath("data.teamInfo").type(JsonFieldType.STRING)
+                                        .description("팀 한줄 소개"),
+                                fieldWithPath("data.teamLeaderNickname").type(JsonFieldType.STRING)
+                                        .description("팀장 닉네임"),
+                                fieldWithPath("data.lastRank").type(JsonFieldType.NUMBER)
+                                        .description("가장 마지막 랭크 내역")
+                        )
+                ));
+        verify(teamService).detailOtherTeamInfo(anyLong());
+
+    }
+
+    @DisplayName("가입 승인")
+    @Test
+    void approveMember() throws Exception {
+        // given
+        Team team = mock(Team.class);
+        Member member = mock(Member.class);
+
+        TeamRequestDTO request = TeamRequestDTO.builder()
+                .teamId(1L)
+                .memberId(1L)
+                .build();
+
+        doNothing().when(teamService).approveMember(any(TeamRequestDTO.class));
+
+        mockMvc.perform(
+                        post("/api/team/approve")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(new ObjectMapper().writeValueAsString(request))
+                )
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andDo(
+                        document("approve-member",
+                                preprocessRequest(prettyPrint()),
+                                preprocessResponse(prettyPrint()),
+                                requestFields(
+                                        fieldWithPath("teamId").type(JsonFieldType.NUMBER)
+                                                .description("팀 ID"),
+                                        fieldWithPath("memberId").type(JsonFieldType.NUMBER)
+                                                .description("승인 대기 유저 ID")
+                                ), responseFields(
+
+                                        fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                                .description("코드"),
+                                        fieldWithPath("status").type(JsonFieldType.STRING)
+                                                .description("상태"),
+                                        fieldWithPath("message").type(JsonFieldType.STRING)
+                                                .description("메시지"),
+                                        fieldWithPath("data").type(JsonFieldType.STRING)
+                                                .description("승인 완료 메시지")
+                                )
+                        ));
+        verify(teamService).approveMember(any(TeamRequestDTO.class));
+    }
+
+    @DisplayName("가입 거절")
+    @Test
+    void rejectMember() throws Exception {
+        // given
+        Team team = mock(Team.class);
+        Member member = mock(Member.class);
+
+        TeamRequestDTO request = TeamRequestDTO.builder()
+                .teamId(1L)
+                .memberId(1L)
+                .build();
+
+        doNothing().when(teamService).rejectMember(any(TeamRequestDTO.class));
+
+        mockMvc.perform(
+                        post("/api/team/reject")
+                                .contentType(MediaType.APPLICATION_JSON)
+                                .content(new ObjectMapper().writeValueAsString(request))
+                )
+                .andDo(print())
+                .andExpect(status().isOk())
+                .andDo(
+                        document("reject-member",
+                                preprocessRequest(prettyPrint()),
+                                preprocessResponse(prettyPrint()),
+                                requestFields(
+                                        fieldWithPath("teamId").type(JsonFieldType.NUMBER)
+                                                .description("팀 ID"),
+                                        fieldWithPath("memberId").type(JsonFieldType.NUMBER)
+                                                .description("승인 대기 유저 ID")
+                                ), responseFields(
+
+                                        fieldWithPath("code").type(JsonFieldType.NUMBER)
+                                                .description("코드"),
+                                        fieldWithPath("status").type(JsonFieldType.STRING)
+                                                .description("상태"),
+                                        fieldWithPath("message").type(JsonFieldType.STRING)
+                                                .description("메시지"),
+                                        fieldWithPath("data").type(JsonFieldType.STRING)
+                                                .description("거절 완료 메시지")
+                                )
+                        )
+                );
+        verify(teamService).rejectMember(any(TeamRequestDTO.class));
 
     }
 
